2008-10-31  Cameron Zwarich  <zwarich@apple.com>

        Not reviewed.

        * Scripts/do-webcore-rename:

        Add some renames to contemplate for the future.

2008-10-31  Darin Adler  <darin@apple.com>

        Requested by Mark Rowe.

        * Scripts/check-for-global-initializers: s/Web Kit/WebKit/.

2008-10-31  David Kilzer  <ddkilzer@apple.com>

        Bug 21997: prepare-ChangeLog should filter out ChangeLog files

        <https://bugs.webkit.org/show_bug.cgi?id=21997>

        Reviewed by Darin Adler.

        * Scripts/prepare-ChangeLog:
        (generateFileList): Don't add ChangeLog files to %{$functionLists}.
        This prevents them from showing up in the new ChangeLog entry.  They
        were already excluded from @{$changedFiles}.

2008-10-30  Mark Rowe  <mrowe@apple.com>

        Reviewed by Jon Homeycutt.

        Explicitly default to building for only the native architecture in debug and release builds.

        * DumpRenderTree/mac/Configurations/DebugRelease.xcconfig:

2008-10-30  Pierre-Olivier Latour  <pol@apple.com>

        Reviewed by Dan Bernstein.

        Fixed 64 bit build failure.

        * DumpRenderTree/mac/PixelDumpSupportMac.mm:
        (setupMainDisplayColorProfile):
        (createBitmapContextFromWebView):

2008-10-28  Alp Toker  <alp@nuanti.com>

        Fix GTK DRT following build breakage in r37928.

        * DumpRenderTree/gtk/DumpRenderTree.cpp:
        (dump):
        (runTest):
        (main):

2008-10-28  Alp Toker  <alp@nuanti.com>

        Reviewed by Mark Rowe.

        Fix recently introduced double-free crashes in GTK DRT.

        LayoutTestController was made ref-counted in r36606 and Mac/Win DRT
        were updated to call ->deref() but GTK DRT was still deleting
        gLayoutTestController manually. This patch updates GTK to match the
        other ports and resolves the memory allocation issues.

        * DumpRenderTree/gtk/DumpRenderTree.cpp:
        (runTest):
